# NDKApplication

./: settings.gradle
app/: build.gradle  ndk_crash_log.txt
app/src/androidTest/java/com/bian/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: first_bitmap_shader.glsl  first_bitmap_v.glsl  first_cube_shader.glsl  first_cube_v.glsl  first_particular_fragment.glsl  first_particular_v.glsl  first_shader.glsl  first_v.glsl  second_shader.glsl  second_v.glsl  tips.md
app/src/main/assets/cube/: cube_bitmap_fragment.glsl  cube_bitmap_v.glsl
app/src/main/cpp/: CMakeLists.txt  bian-lib.cpp
app/src/main/cpp/bitmap_compress/: CMakeLists.txt
app/src/main/cpp/bitmap_compress/head/: AndroidLog.h  BitMapCompress.h  Student.h  jmorecfg.h  jpeglib.h  turbojpeg.h
app/src/main/cpp/bitmap_compress/src/: BitMapCompress.c  BitMapCompressCpp.cpp  BitMapCompressCpp.h  BitmapCompress.cpp  BitmapCompress.h  MainControl.cpp  MainControl.h  Student.c
app/src/main/cpp/ffmpeg/: CMakeLists.txt  build_arm_v8a.sh  build_x86_64.sh
app/src/main/cpp/ffmpeg/headers/: AudioFrameDataBean.h  DecodeVideo.h  EncodePicToVideo.h  FFmpegCore.h  GlobalConfig.h  List.h  MutilThreadPlayer.h  MyVideoPlayer.h  MyVideoQueue.h  NewPlayVideoInterface.h  NewVideoPlayer.h  OpenGLPlayer.h  TestEncodeVideo.h  TestVideoYUV.h  VideoList.h  VideoPlay.h
app/src/main/cpp/ffmpeg/test/: AndroidPcmPlayer.cpp  AndroidPcmPlayer.h  AudioFrameDataBean.cpp  AudioPlayer.cpp  AudioPlayer.h  AudioResampler.cpp  AudioResampler.h  ChangeVideo.cpp  EncodePicToVideo.c  EncodeVideo.c  FFmpegCore.c  List.c  MutilThreadPlayer.cpp  MutilThreadPlayer.h  MyVideoPlayer.cpp  NewPlayVideoInterface.cpp  NewVideoPlayer.cpp  NewVideoPlayer.h  OpenGLPlayer.cpp  RegisterControl.cpp  SimpleCppPlayer.cpp  SimpleCppPlayer.h  TestVideoYUV.c  VideoAudioPlayer.cpp  VideoAudioPlayer.h  VideoCompress.c  VideoFilter.cpp  VideoFilter.h  VideoList.c  VideoPlay.c  VideoRecord.c
app/src/main/cpp/ffmpeg/video/: decode_audio.c  decode_video.c  demuxing_decoding.c  encode_audio.c  encode_video.c  filter_audio.c  filtering_audio.c  filtering_video.c  metadata.c  muxing.c  resampling_audio.c  transcode_aac.c  transcoding.c
app/src/main/cpp/headers/: GlobalConfig.h  NdkTest.h  StructTest.h
app/src/main/cpp/headers/libavutil/: hwcontext_qsv.h
app/src/main/cpp/native_pracise/: CMakeLists.txt
app/src/main/cpp/native_pracise/head/: AndroidLog.h  ArrayList.h  AssetReader.h  BaseOpenGlDrawer.h  BitmapDrawer.h  BlockingList.h  Comparator.h  CubeBitMapDrawer.h  CubeDrawer.h  FirstOpenGLDrawer.h  ImageDrawer.h  Instancing.h  InstancingDrawer.h  JetParticularDrawer.h  LinkedBlockedQueue.h  MainControl.h  NativeTest.h  NewCuberDrawer.h  NewParticularDrawer.h  OffScreenDrawer.h  ParticularDrawer.h  PointDrawer.h  PthreadTest.h  SearchList.h  SecondViewDrawer.h  SimpleBean.h  Student.h  SurfaceViewDrawer.h  Task.h  ThreadPool.h  TimeUtil.h
app/src/main/cpp/native_pracise/src/: AssetReader.c  BaseOpenGlDrawer.cpp  BitmapDrawer.cpp  BlockingList.cpp  CppTest.cpp  CubeDrawer.cpp  FirstOpenGLDrawer.cpp  ImageDrawer.cpp  Instancing.c  InstancingDrawer.cpp  LightCubeDrawer.h  LinkedBlockedQueue.c  MainControl.cpp  NativeTest.c  NewCuberDrawer.cpp  NewParticularDrawer.cpp  OffScreenDrawer.cpp  ParticularDrawer.cpp  PointDrawer.cpp  PthreadTest.c  SecondViewDrawer.cpp  SimpleBean.cpp  Student.cpp  SurfaceViewDrawer.cpp  TestThread.c  ThreadPool.c  ThreadTest.cpp  ThreadTest.h
app/src/main/cpp/native_pracise/src/common/: TimeUtil.c  esShapes.c  esUtil.c
app/src/main/cpp/native_pracise/src/cube/: CubeDrawer.cpp  LightCubeDrawer.cpp
app/src/main/cpp/native_pracise/src/particular/: JetParticularDrawer.cpp  ParticularDrawer.cpp
app/src/main/cpp/native_pracise/src/texture/: BitmapDrawer.cpp  CubeBitMapDrawer.cpp
app/src/main/cpp/src/: NdkTest.c
app/src/main/cpp/src/test/: Test.c  VideoFilter.c  VideoPlay.c  VideoRecord.c
app/src/main/cpp/src/video/: avio_dir_cmd.c  avio_reading.c  decode_video.c  encode_video.c  extract_mvs.c  http_multiclient.c  muxing.c  remuxing.c  resampling_audio.c  scaling_video.c
app/src/main/cpp/videoplayer/: CMakeLists.txt
app/src/main/cpp/videoplayer/headers/: AVFrameList.h  AVPacketList.h  AndroidPcmPlayer.h  AudioDecoder.h  AudioFrameDataBean.h  AvInfor.h  ExecutorThreadPool.h  GlobalConfig.h  LinkedBlockingQueue.h  Runnable.h  StreamDecoder.h  Thread.h  VideoAudioPlayer.h  VideoDecoder.h  VideoDisplayer.h  VideoPlayControler.h
app/src/main/cpp/videoplayer/headers/libavcodec/: avcodec.h
app/src/main/cpp/videoplayer/headers/libavutil/: intreadwrite.h
app/src/main/cpp/videoplayer/main/: AVFrameList.cpp  AVPacketList.cpp  AndroidPcmPlayer.cpp  AudioDecoder.cpp  AudioFrameDataBean.cpp  AudioResampler.cpp  NewSurfaceViewPlayer.cpp  NewSurfaceViewPlayer.h  StreamDecoder.cpp  SurfaceViewPlayer.cpp  SurfaceViewPlayer.h  VideoAudioPlayer.cpp  VideoDecoder.cpp  VideoDisplayer.cpp  VideoPlayControler.cpp
app/src/main/cpp/videoplayer/main/bean/: AvInfor.cpp
app/src/main/cpp/videoplayer/main/thread/: ExecutorThreadPool.cpp  Thread.cpp
app/src/main/java/com/bian/myapplication/: MainActivity.java
app/src/main/res/drawable/: bg_main_bt.xml  bg_video_select.xml
app/src/main/res/layout/: activity_image.xml  activity_image_list.xml  activity_main.xml  activity_new_video_play.xml  activity_open_gl.xml  activity_play_audio.xml  activity_play_audio_video.xml  activity_record_video.xml  activity_test_img.xml  activity_video_play.xml  activity_video_to_picture.xml  d_list_view.xml  fragment_basic_particle.xml  fragment_common.xml  fragment_cube.xml  fragment_first.xml  fragment_line.xml  fragment_map_buffer.xml  fragment_mix.xml  fragment_new_cube.xml  fragment_point.xml  fragment_rect.xml  headview_video_list.xml
app/src/main/res/menu/: gl_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
opecvmodule/src/main/: AndroidManifest.xml
opecvmodule/src/main/res/values/: strings.xml
(+51 files in other folders)
